--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,9 @@
     "chart.js": "^4.4.7",
     "framer-motion": "^11.14.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.27.0"
   },
