--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,4 +8,12 @@
       "path": "./tsconfig.node.json"
     }
   ],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/components/*": [
+        "src/components/*"
+      ]
+    }
+  }
 }
