--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
     "framer-motion": "^11.14.4",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.2.2",
@@ -22,7 +23,8 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-responsive": "^10.0.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -37,6 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
+    "sass": "^1.83.4",
     "tailwindcss": "^3.4.16",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
